--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,36 +8,31 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/image"
+        android:id="@+id/imageByJar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="print image"
+        android:text="用插件打印图片"
         android:textAllCaps="false"/>
 
     <Button
-        android:id="@+id/pdf"
+        android:id="@+id/pdfByWord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="print pdf"
+        android:text="用word应用打印pdf"
         android:textAllCaps="false"/>
 
     <Button
-        android:id="@+id/email"
+        android:id="@+id/pdfByQQEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="print pdf by email"
+        android:text="用QQ邮箱发送邮件打印pdf"
         android:textAllCaps="false"/>
 
+    <Button
+        android:id="@+id/pdfBy163Email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="用android后台发送邮件打印pdf"
+        android:textAllCaps="false"/>
 
-    <!--<ScrollView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:fillViewport="true">-->
-
-    <!--<com.joanzapata.pdfview.PDFView-->
-        <!--android:id="@+id/v_test"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"/>-->
-
-    <!--</ScrollView>-->
 </LinearLayout>
